- MANTA-53 Enable --rescore option in runWorkflow.py
- MANTA-40 Don't call splicing-events in RNA-seq as deletions
- MANTA-20 include split read counts for short reads
- MANTA-44 Fix Rhodobacter analysis
v0.11
- Adjust all vcf output to pass vcf-validator
- MANTA-20 fix split read breakpoint location
v0.10.1
- Fix low-frequency assertion due to unexpected alignment pattern
v0.10
- MANTA-20 Limit split read counts to those uniquely supporting each allele,
where P(allele|read)>0.999
- MANTA-20 Add likelihood based QUAL,GQ scores to diploid output, adjust
thresholds of somatic output to incorporate ref pairs and split reads.
- MANTA-41 Fails when chrom name not in [a-zA-z0-9_-]+
- MANTA-25 Partial support for BWA-MEM SA split reads
- MANTA-36 Segfault on RNA-Seq BAM input
- MANTA-20 Combined reference spanning read and split read evidence per variant
- MANTA-20 Diploid vcf output for non-tumor sample, diploid genotype inference score still todo
- MANTA-39 prevent crash on large CIGAR deletions
- MANTA-20 split read evidence counts for all large spanning SVs
v0.9
- MANTA-20 preliminary work on this branch allows assembly skip and control of min indel candidate size and min indel score size
- MANTA-33 reduce SV graph ram requirement to ~1/3 of its previous value, increase all post-merge task memory requests.
- MANTA-17 merged shadow reads into assembly and adjusted assembly parameters. Large (50+ base) insertion sensitivity improves by ~.35-.4 as a result.
- Improvements to vcf output and cmake build.
v0.8
- MANTA-28 Add prototype discovery/local-assembly of small events down to 10 bases 
- MANTA-24 Better handle very high depth and chimeric noise complexity based
on BWA-mem FFPE examples
- MANTA-26 Extend fragment stats to provide estimate of full fragment size
distribution
- Large event assembly fixes
- MANTA-23 enable use of pre-existing depth and stats files (for sparse bams)
v0.7
- Add assembly of large-event breakends and basepair resolution SV reporting